# abseil-cpp

./: .gitignore  .plzconfig  BUILD.bazel  WORKSPACE  googlebenchmark.build  googletest.build
absl/: BUILD.plz
absl/algorithm/: BUILD.bazel
absl/base/: BUILD.bazel
absl/container/: BUILD.bazel
absl/copts/: BUILD.plz  configure_copts.bzl
absl/debugging/: BUILD.bazel
absl/flags/: BUILD.bazel
absl/functional/: BUILD.bazel
absl/hash/: BUILD.bazel
absl/memory/: BUILD.bazel
absl/meta/: BUILD.bazel
absl/numeric/: BUILD.bazel
absl/random/: BUILD.bazel
absl/random/internal/: BUILD.bazel
absl/status/: BUILD.bazel
absl/strings/: BUILD.bazel
absl/synchronization/: BUILD.bazel
absl/time/: BUILD.bazel
absl/time/internal/cctz/: BUILD.bazel
absl/types/: BUILD.bazel
absl/utility/: BUILD.bazel
plz/: compat.build_defs
plz/cc/: BUILD
